bk_ida/gccida/g0/bitmap_print
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1256:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+40h] [rbp-20h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1256:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1256:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+40h] [rbp-20h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1257:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+48h] [rbp-18h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1257:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1257:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+48h] [rbp-18h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1262:25: error: use of undeclared identifier 'unk_748822'
comma = ( const char *)&unk_748822; 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1266:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1270:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1274:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ <= 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1276:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1276:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1277:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1281:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1283:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~( 1LL << bit_num_); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1284:63: error: invalid suffix 'xnum_' on integer constant
fprintf( file, "%s%d", comma, ( ( 2 * ptr_->indx + *(short *)0xnum_) << 6) + bit_num_); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1286:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1293:14: error: invalid suffix 'xnum_' on integer constant
++*(short *)0xnum_; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/bitmap.c:1295:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/bitmap_print/src/obj/bitmap.o] Error 1
